err/aionationstates.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/aionationstates'...
Compiling './lib/python3.5/site-packages/aionationstates/happenings.py'...
***   File "./lib/python3.5/site-packages/aionationstates/happenings.py", line 51
    return f'<Happening #{self.id}>'
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aionationstates/nation_.py'...
***   File "./lib/python3.5/site-packages/aionationstates/nation_.py", line 71
    return f'<Policy "{self.name}">'
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aionationstates/ratelimit.py'...
***   File "./lib/python3.5/site-packages/aionationstates/ratelimit.py", line 21
    logger.debug(f'waiting {to_sleep} seconds on ratelimiter')
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aionationstates/region_.py'...
***   File "./lib/python3.5/site-packages/aionationstates/region_.py", line 262
    return f'[quote={self.author.id};{self.id}]{text}[/quote]'
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aionationstates/session.py'...
***   File "./lib/python3.5/site-packages/aionationstates/session.py", line 189
    standard_user_agent = f'aionationstates/{__version__}'
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aionationstates/shared.py'...
***   File "./lib/python3.5/site-packages/aionationstates/shared.py", line 169
    return f'<Dispatch id={self.id}>'
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aionationstates/utils.py'...
***   File "./lib/python3.5/site-packages/aionationstates/utils.py", line 21
    return f'<{self.__class__.__name__} id={self.id}>'
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aionationstates/world_.py'...
***   File "./lib/python3.5/site-packages/aionationstates/world_.py", line 172
    raise NotFound(f'No dispatch found with id {id}')
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aionationstates-0.3.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
